# testspdlog

./: CMakeLists.txt  README.md  example.cpp
.github/workflows/: windows-x64-cpu-vs2019.yml
